# mandelbrot_compute

./: Cargo.toml
src/: app.rs  computer.rs  main.rs  math.rs  renderer.rs
src/shaders/: mandelbrot.wgsl  render.wgsl
