[package]
name = "mandelbrot_compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.9", features = [ "derive" ] }
image = "0.24"
wgpu = "0.13.1"
winit = "0.26"
pollster = "0.2.5"

[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.deflate]
opt-level = 3